--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainScreen">
+        <activity android:name=".MainScreen"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
 
@@ -62,8 +63,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpScreen" />
-        <activity android:name=".LoginScreen" />
+        <activity android:name=".SignUpScreen"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".LoginScreen"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
