--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,54 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
-buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-        mavenCentral()
+android {
+    compileSdkVersion 28
+    defaultConfig {
+        applicationId "edu.usf.cse.labrador.save_a_bull"
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath false
+            }
+        }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+    /*packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }*/
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.facebook.android:facebook-android-sdk:4.41.0'
+    implementation 'com.google.android.gms:play-services-base:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    //implementation 'com.google.firebase:firebase-admin:6.8.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    /*annotationProcessor 'com.google.auto.value:auto-value:1.4'*/
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
