modified:   .idea/caches/gradle_models.ser 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/ForgetAndChangePasswordActivity.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/SignUpScreen.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/fragment/Gallery/GalleryFragment.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/fragment/Gallery/RecycleViewAdapter.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/sqlite/database/DatabaseHelper.java 	new file:   app/src/main/res/layout/activity_forget_and_change_password2.xml 	modified:   app/src/main/res/layout/activity_login_screen.xml 	modified:   app/src/main/res/layout/activity_sign_up_screen.xml modified:   app/src/main/res/layout/dialog_account_settings.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,18 @@
     package="edu.usf.cse.labrador.save_a_bull">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <uses-feature android:glEsVersion="0x0020000" android:required="true"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature
+        android:glEsVersion="0x0020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ForgetAndChangePasswordActivity"></activity>
         <activity android:name=".WelcomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,16 +39,12 @@
             </intent-filter>
         </activity>
 
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAue9wrMzdifd_FlZOHz9afKXZ2eKPL6aU"
-            />
-
+            android:value="AIzaSyAue9wrMzdifd_FlZOHz9afKXZ2eKPL6aU" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
