--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     /*packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }*/
@@ -49,6 +53,21 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     //implementation 'com.google.firebase:firebase-admin:6.8.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation "org.robolectric:shadows-supportv4:3.8"
+    testImplementation 'org.robolectric:shadows-support-v4:3.0'
+    testImplementation 'org.robolectric:robolectric:4.2'
+    testImplementation "org.robolectric:shadows-multidex:4.0.1"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:0.3'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2'
+// include espresso-intents
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2'
+
+
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     /*annotationProcessor 'com.google.auto.value:auto-value:1.4'*/
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
