crashing - trying to retrieve user's favorites as a string from sqlite

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
