--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,21 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!--
+        The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+        Google Maps Android API v2, but you must specify either coarse or fine
+        location permissions for the 'MyLocation' functionality.
+   -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <permission
+        android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"/>
+
+
     <uses-feature
         android:glEsVersion="0x0020000"
         android:required="true" />
@@ -73,6 +88,9 @@
         <activity
             android:name=".LoginScreen"
             android:windowSoftInputMode="adjustPan" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAbVCip-lwIfEDIEIp2kIFhCTsb5HMRKFQ" />
     </application>
 
 </manifest>
