--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="edu.usf.cse.labrador.save_a_bull">
 
+    <!--
+            The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+            Google Maps Android API v2, but you must specify either coarse or fine
+            location permissions for the 'MyLocation' functionality.
+       -->
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <permission
+        android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"/>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -13,22 +24,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!--
-        The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-        Google Maps Android API v2, but you must specify either coarse or fine
-        location permissions for the 'MyLocation' functionality.
-   -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <permission
-        android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="edu.usf.cse.labrador.save_a_bull.permission.MAPS_RECEIVE"/>
+
 
 
     <uses-feature
@@ -62,9 +60,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAue9wrMzdifd_FlZOHz9afKXZ2eKPL6aU" />
+        <!--<meta-data-->
+            <!--android:name="com.google.android.geo.API_KEY"-->
+            <!--android:value="AIzaSyAue9wrMzdifd_FlZOHz9afKXZ2eKPL6aU" />-->
 
         <activity
             android:name="com.facebook.FacebookActivity"
